# path_vector_routing_simulation

./: CMakeLists.txt  README.md  main.c  make_topology.pl  manager_send.c  monitor_neighbors.h  sendmessages.sh  setupiptablesendmessages.sh  setuptopandnodes.sh  vec_router
example_simple/: make_topology.pl
example_topology/: testtopo.txt
